--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -261,8 +261,8 @@ services:
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    # image: linuxserver/radarr:latest
-    image: linuxserver/radarr:preview
+    image: linuxserver/radarr:latest
+    #image: linuxserver/radarr:preview
     labels: 
       - traefik.enable=true
       - traefik.backend=radarr
