--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ networks:
       name: traefik_proxy
 services: 
   taisun:
-    image: linuxserver/taisun
+    image: linuxserver/taisun:latest
     container_name: taisun
     ports:
       - "3000:3000"
@@ -41,7 +41,7 @@ services:
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
   lazylibrarian:
-    image: linuxserver/lazylibrarian
+    image: linuxserver/lazylibrarian:latest
     container_name: lazylibrarian
     environment:
       - TZ=America/Chicago
@@ -133,7 +133,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
     container_name: netdata
-    image: netdata/netdata
+    image: netdata/netdata:latest
     labels: 
       # - traefik.frontend.auth.forward.address=http://oauth:4181
       # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
@@ -199,12 +199,12 @@ services:
       - SELF_UPDATE=true
       - "IGNORE=mongo influxdb postgres mariadb"
       - TZ=America/Chicago
-    image: pyouroboros/ouroboros
+    image: pyouroboros/ouroboros:latest
     restart: unless-stopped
     volumes: 
       - "/var/run/docker.sock:/var/run/docker.sock"
   plex:
-    image: plexinc/pms-docker
+    image: plexinc/pms-docker:latest
     container_name: plex
     volumes:
       - /mnt/storage/media/download-reprocess:/download-reprocess
@@ -234,7 +234,7 @@ services:
       - "/mnt/storage/appdata/shared:/shared"
   portainer: 
     container_name: portainer
-    image: portainer/portainer-ce
+    image: portainer/portainer-ce:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=portainer
@@ -261,7 +261,7 @@ services:
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: linuxserver/radarr
+    image: linuxserver/radarr:latest
     #image: linuxserver/radarr:preview
     labels: 
       - traefik.enable=true
@@ -292,7 +292,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-    image: linuxserver/sabnzbd
+    image: linuxserver/sabnzbd:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=sabnzbd
@@ -321,7 +321,7 @@ services:
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: linuxserver/sonarr
+    image: linuxserver/sonarr:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=sonarr
@@ -356,7 +356,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-    image: linuxserver/tautulli
+    image: linuxserver/tautulli:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=tautulli
