--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -261,8 +261,8 @@ services:
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: linuxserver/radarr:latest
-    #image: linuxserver/radarr:preview
+    # image: linuxserver/radarr:latest
+    image: linuxserver/radarr:preview
     labels: 
       - traefik.enable=true
       - traefik.backend=radarr
@@ -314,14 +314,15 @@ services:
     volumes: 
       - "/mnt/storage/appdata/sabnzbd/config:/config"
       - "/mnt/storage/media/incomplete-downloads:/incomplete-downloads"
-      - "/mnt/storage/media/downloads:/downloads"
+      - "/mnt/storage/media/downloads/movie-downloads:/movie-downloads"
+      - "/mnt/storage/media/downloads/tv-downloads:/tv-downloads"
       - "/mnt/storage/appdata/shared:/shared"
   sonarr: 
     container_name: sonarr
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: linuxserver/sonarr:latest
+    image: linuxserver/sonarr:preview
     labels: 
       - traefik.enable=true
       - traefik.backend=sonarr
