--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,14 +22,10 @@ services:
     #   - "80:80/tcp"
     #   - "443:443/tcp"
     environment:
-      TZ: 'America/Chicago'
-      DNS1: 208.67.222.222
-      DNS2: 208.67.220.220
+      TZ: "America/Chicago"
       DNS_FQDN_REQUIRED: "true"
-      # CONDITIONAL_FORWARDING: "true"
       ServerIP: 192.168.100.150
-      # VIRTUAL_HOST: "pepper"
-      TEMPERATUREUNIT: 'f'
+      TEMPERATUREUNIT: "f"
       restart: unless-stopped    
     volumes:
       - '/mnt/storage/appdata/pihole/etc/pihole/:/etc/pihole/'
