--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -592,3 +592,59 @@ services:
       - TZ=America/Chicago
       - "PUID=${PUID}"
       - "PGID=${PGID}"
+  speedtest:
+    image: henrywhitaker3/speedtest-tracker
+    container_name: speedtest
+    environment: 
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - TZ=America/Chicago
+      - OOKLA_EULA_GDPR=true
+    volumes:
+     - "/mnt/storage/appdata/speedtest:/config"
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "10"
+        max-size: "200k"
+    labels: 
+     - traefik.enable=true
+     - traefik.backend=speedtest
+     - "traefik.frontend.rule=Host:speedtest.${DOMAINNAME}"
+     - traefik.port=80
+     - traefik.docker.network=traefik_proxy
+     - traefik.frontend.headers.SSLRedirect=true
+     - traefik.frontend.headers.STSSeconds=315360000
+     - traefik.frontend.headers.browserXSSFilter=true
+     - traefik.frontend.headers.contentTypeNosniff=true
+     - traefik.frontend.headers.forceSTSHeader=true
+     - traefik.frontend.headers.SSLHost=frost.haus
+     - traefik.frontend.headers.STSIncludeSubdomains=true
+     - traefik.frontend.headers.STSPreload=true
+     - traefik.frontend.headers.frameDeny=false
+  monitorr:
+    image: monitorr/monitorr
+    container_name: monitorr
+    environment: 
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - TZ=America/Chicago
+    volumes:
+     - "/mnt/storage/appdata/monitorr:/app"
+    restart: unless-stopped
+    labels: 
+     - traefik.enable=true
+     - traefik.backend=monitorr
+     - "traefik.frontend.rule=Host:monitorr.${DOMAINNAME}"
+     - traefik.port=80
+     - traefik.docker.network=traefik_proxy
+     - traefik.frontend.headers.SSLRedirect=true
+     - traefik.frontend.headers.STSSeconds=315360000
+     - traefik.frontend.headers.browserXSSFilter=true
+     - traefik.frontend.headers.contentTypeNosniff=true
+     - traefik.frontend.headers.forceSTSHeader=true
+     - traefik.frontend.headers.SSLHost=frost.haus
+     - traefik.frontend.headers.STSIncludeSubdomains=true
+     - traefik.frontend.headers.STSPreload=true
+     - traefik.frontend.headers.frameDeny=false
