--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,64 +113,6 @@ services:
       - traefik.frontend.headers.frameDeny=false
     networks: 
       - traefik_proxy
-#  mylar: 
-#    container_name: mylar
-#    environment: 
-#      - TZ=America/Chicago
-#      - "PUID=${PUID}"
-#      - "PGID=${PGID}"
-#    image: linuxserver/mylar:latest
-#    labels: 
-#      - traefik.enable=true
-#      - traefik.backend=mylar
-#      - "traefik.frontend.rule=Host:mylar.${DOMAINNAME}"
-#      - traefik.port=8090
-#      - traefik.docker.network=traefik_proxy
-#      - traefik.frontend.headers.SSLRedirect=true
-#      - traefik.frontend.headers.STSSeconds=315360000
-#      - traefik.frontend.headers.browserXSSFilter=true
-#      - traefik.frontend.headers.contentTypeNosniff=true
-#      - traefik.frontend.headers.forceSTSHeader=true
-#      - traefik.frontend.headers.SSLHost=frost.haus
-#      - traefik.frontend.headers.STSIncludeSubdomains=true
-#      - traefik.frontend.headers.STSPreload=true
-#      - traefik.frontend.headers.frameDeny=false
-#    networks: 
-#      - traefik_proxy
-#    volumes: 
-#      - "/mnt/storage/appdata/mylar:/config"
-#      - "/mnt/storage/media/comics-import:/comics-import"
-#      - "/mnt/storage/media/downloads:/downloads"
-#      - "/mnt/storage/media/comics:/comics"
-#  gaps:
-#    container_name: gaps
-#    expose: 
-#      - "32400"
-#    environment:
-#      - TZ=America/Chicago
-#      - "PUID=${PUID}"
-#      - "PGID=${PGID}"
-#    image: housewrecker/gaps:latest-no-ssl
-#    restart: unless-stopped
-#    labels:
-#      - traefik.enable=true
-#      - traefik.backend=gaps
-#      - "traefik.frontend.rule=Host:gaps.${DOMAINNAME}"
-#      - traefik.port=8484
-#      - traefik.docker.network=traefik_proxy
-#      - traefik.frontend.headers.SSLRedirect=true
-#      - traefik.frontend.headers.STSSeconds=315360000
-#      - traefik.frontend.headers.browserXSSFilter=true
-#      - traefik.frontend.headers.contentTypeNosniff=true
-#      - traefik.frontend.headers.forceSTSHeader=true
-#      - traefik.frontend.headers.SSLHost=frost.haus
-#      - traefik.frontend.headers.STSIncludeSubdomains=true
-#      - traefik.frontend.headers.STSPreload=true
-#      - traefik.frontend.headers.frameDeny=false
-#    networks:
-#      - traefik_proxy
-#    volumes:
-#      - "/etc/localtime:/etc/localtime:ro"
   netdata: 
     environment: 
       - TZ=America/Chicago
@@ -179,9 +121,6 @@ services:
     container_name: netdata
     image: netdata/netdata:latest
     labels: 
-      # - traefik.frontend.auth.forward.address=http://oauth:4181
-      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      # - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
       - traefik.backend=netdata
       - "traefik.frontend.rule=Host:netdata.${DOMAINNAME}"
@@ -212,7 +151,6 @@ services:
       - "PGID=${PGID}"
       - "TZ=${TZ}"
       - "fpm=false"
-    # image: lsiocommunity/organizr
     image: organizr/organizr:latest
     labels: 
       - traefik.enable=true
@@ -234,7 +172,6 @@ services:
     restart: always
     volumes: 
       - "/mnt/storage/appdata/organizr:/config"
-  #    - "/mnt/storage/appdata/shared:/shared"
   ouroboros: 
     container_name: ouroboros
     environment: 
@@ -446,13 +383,6 @@ services:
       - traefik.frontend.headers.SSLHost=frost.haus
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
-      # - traefik.frontend.headers.frameDeny=false
-      # - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
-      # Below is new section - test 2
-      # - traefik.frontend.auth.forward.address=http://oauth:4181
-      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      # - traefik.frontend.auth.forward.trustForwardHeader=true
-      # New starts here
       - traefik.protocol=http
       - "traefik.frontend.headers.SSLHost=traefik.${DOMAINNAME}"
       - traefik.frontend.passHostHeader=true
@@ -464,7 +394,6 @@ services:
     - default
     - traefik_proxy
     ports: 
-      # - "80:80"
       - "443:443"
       - "8145:8080"
     restart: always
@@ -472,33 +401,6 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/mnt/storage/appdata/traefik:/etc/traefik"
       - "/mnt/storage/appdata/shared/traefik:/shared"
-#  gazee:
-#    image: linuxserver/gazee:latest
-#    container_name: gazee
-#    environment:
-#      - "PUID=${PUID}"
-#      - "PGID=${PGID}"
-#    volumes:
-#      - "/mnt/storage/appdata/gazee:/config"
-#      - "/mnt/storage/media/comics:/comics"
-#      - "/mnt/storage/appdata/mylar/mylar:/mylar"
-#      - "/mnt/storage/appdata/gazee/certs:/certs"
-#    restart: unless-stopped
-#    labels: 
-#      - traefik.enable=true
-#      - traefik.backend=gazee
-#      - "traefik.frontend.rule=Host:gazee.${DOMAINNAME}"
-#      - traefik.port=4242
-#      - traefik.docker.network=traefik_proxy
-#      - traefik.frontend.headers.SSLRedirect=true
-#      - traefik.frontend.headers.STSSeconds=315360000
-#      - traefik.frontend.headers.browserXSSFilter=true
-#      - traefik.frontend.headers.contentTypeNosniff=true
-#      - traefik.frontend.headers.forceSTSHeader=true
-#      - traefik.frontend.headers.SSLHost=frost.haus
-#      - traefik.frontend.headers.STSIncludeSubdomains=true
-#      - traefik.frontend.headers.STSPreload=true
-#      - traefik.frontend.headers.frameDeny=false
   duplicati:
     image: linuxserver/duplicati:amd64-latest
     container_name: duplicati
@@ -525,46 +427,6 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
-  # oauth:
-  #   image: thomseddon/traefik-forward-auth
-  #   container_name: oauth
-  #   hostname: oauth
-  #   restart: always
-  #   networks:
-  #     - default
-  #     - traefik_proxy
-  #   environment:
-  #     - "PROVIDERS_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}"
-  #     - "PROVIDERS_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}"
-  #     - "SECRET=${OAUTH_SECRET}"
-  #     - "COOKIE_DOMAIN=${DOMAINNAME}"
-  #     - INSECURE_COOKIE=false
-  #     - "AUTH_HOST=oauth.${DOMAINNAME}"
-  #     - URL_PATH=/_oauth
-  #     - "WHITELIST=${MY_EMAIL}"
-  #     - LOG_LEVEL=info
-  #     - LIFETIME=2592000 # 30 days
-  #   labels:
-  #     - traefik.enable=true
-  #     - traefik.backend=oauth
-  #     - traefik.port=4181
-  #     - "traefik.frontend.rule=Host:oauth.${DOMAINNAME}"
-  #     - "traefik.frontend.headers.SSLHost=oauth.${DOMAINNAME}"
-  #     - traefik.docker.network=traefik_proxy
-  #     - traefik.frontend.passHostHeader=true
-  #     - traefik.frontend.headers.SSLForceHost=true
-  #     - traefik.frontend.headers.customResponseHeaders=X-Robots-Tag:noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
-  #     - traefik.frontend.headers.SSLRedirect=true
-  #     - traefik.frontend.headers.browserXSSFilter=true
-  #     - traefik.frontend.headers.contentTypeNosniff=true
-  #     - traefik.frontend.headers.forceSTSHeader=true
-  #     - traefik.frontend.headers.STSSeconds=315360000
-  #     - traefik.frontend.headers.STSIncludeSubdomains=true
-  #     - traefik.frontend.headers.STSPreload=true
-  #     - traefik.frontend.headers.frameDeny=true
-  #     - traefik.frontend.auth.forward.address=http://oauth:4181
-  #     - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-  #     - traefik.frontend.auth.forward.trustForwardHeader=true
   shinobi:
     image: shinobisystems/shinobi:dev
     container_name: shinobi
@@ -660,6 +522,32 @@ services:
      - traefik.backend=monitorr
      - "traefik.frontend.rule=Host:monitorr.${DOMAINNAME}"
      - traefik.port=80
+     - traefik.docker.network=traefik_proxy
+     - traefik.frontend.headers.SSLRedirect=true
+     - traefik.frontend.headers.STSSeconds=315360000
+     - traefik.frontend.headers.browserXSSFilter=true
+     - traefik.frontend.headers.contentTypeNosniff=true
+     - traefik.frontend.headers.forceSTSHeader=true
+     - traefik.frontend.headers.SSLHost=frost.haus
+     - traefik.frontend.headers.STSIncludeSubdomains=true
+     - traefik.frontend.headers.STSPreload=true
+     - traefik.frontend.headers.frameDeny=false
+  ombi:
+    image: linuxserver/ombi
+    container_name: ombi
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - TZ=America/Chicago
+     # - BASE_URL=/ombi #optional
+    volumes:
+      - "/mnt/storage/appdata/ombi:/config"
+    restart: unless-stopped
+    labels: 
+     - traefik.enable=true
+     - traefik.backend=monitorr
+     - "traefik.frontend.rule=Host:ombi.${DOMAINNAME}"
+     - traefik.port=3579
      - traefik.docker.network=traefik_proxy
      - traefik.frontend.headers.SSLRedirect=true
      - traefik.frontend.headers.STSSeconds=315360000
