--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -545,7 +545,7 @@ services:
     restart: unless-stopped
     labels: 
      - traefik.enable=true
-     - traefik.backend=monitorr
+     - traefik.backend=ombi
      - "traefik.frontend.rule=Host:ombi.${DOMAINNAME}"
      - traefik.port=3579
      - traefik.docker.network=traefik_proxy
