fixed traefik hostname

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     labels: 
       - traefik.enable=true
       - traefik.backend=bazarr
-      - "traefik.frontend.rule=Host:lazylibrarian.${DOMAINNAME}"
+      - "traefik.frontend.rule=Host:bazaar.${DOMAINNAME}"
       - traefik.port=6767
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
