--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,21 +21,24 @@ services:
       - /mnt/storage/appdata/nextcloud/config:/config
       - /mnt/storage/appdata/nextcloud/data:/data
     restart: unless-stopped
+    ports:
+      - "4000:443"
     labels: 
-      - traefik.enable=true
-      - traefik.backend=nextcloud
-      - "traefik.frontend.rule=Host:nextcloud.${DOMAINNAME}"
-      - traefik.port=80
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
+      - "traefik.enable=false"
+      # - traefik.enable=true
+      # - traefik.backend=nextcloud
+      # - "traefik.frontend.rule=Host:nextcloud.${DOMAINNAME}"
+      # - traefik.port=80
+      # - traefik.docker.network=traefik_proxy
+      # - traefik.frontend.headers.SSLRedirect=true
+      # - traefik.frontend.headers.STSSeconds=315360000
+      # - traefik.frontend.headers.browserXSSFilter=true
+      # - traefik.frontend.headers.contentTypeNosniff=true
+      # - traefik.frontend.headers.forceSTSHeader=true
+      # - traefik.frontend.headers.SSLHost=frost.haus
+      # - traefik.frontend.headers.STSIncludeSubdomains=true
+      # - traefik.frontend.headers.STSPreload=true
+      # - traefik.frontend.headers.frameDeny=false
     networks: 
       - traefik_proxy
   bazarr:
