--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,22 +29,8 @@ services:
       - /mnt/storage/appdata/nextcloud/config:/config
       - /mnt/storage/appdata/nextcloud/data:/data
     restart: unless-stopped
-    labels: 
-      - "traefik.enable=false"
-      # - traefik.enable=true
-      # - traefik.backend=nextcloud
-      # - "traefik.frontend.rule=Host:nextcloud.${DOMAINNAME}"
-      # - traefik.port=80
-      # - traefik.docker.network=traefik_proxy
-      # - traefik.frontend.headers.SSLRedirect=true
-      # - traefik.frontend.headers.STSSeconds=315360000
-      # - traefik.frontend.headers.browserXSSFilter=true
-      # - traefik.frontend.headers.contentTypeNosniff=true
-      # - traefik.frontend.headers.forceSTSHeader=true
-      # - traefik.frontend.headers.SSLHost=frost.haus
-      # - traefik.frontend.headers.STSIncludeSubdomains=true
-      # - traefik.frontend.headers.STSPreload=true
-      # - traefik.frontend.headers.frameDeny=false
+    ports:
+      - 443:443
     networks: 
       macvlan_network:
         ipv4_address: 192.168.100.11
