reader has something weird with the slashes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,8 +182,8 @@ services:
       - /mnt/storage/appdata/readarr:/config
       - /mnt/storage/media/downloads/book-downloads:/book-downloads
       - /mnt/storage/media/downloads/comic-downloads:/comic-downloads
-      - /mnt/storage/media/books:/books
-      - /mnt/storage/media/comics:/comics
+      - /mnt/storage/media/books:/books/
+      - /mnt/storage/media/comics:/comics/
     links:
       - sabnzbd
     restart: unless-stopped
