--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -556,8 +556,7 @@ services:
     volumes:
       - /mnt/storage/appdata/Shinobi/docker-plugins/tensorflow:/config
     restart: unless-stopped
-    networks:
-      - host
+    network_mode: host
     environment:
       - PLUGIN_KEY=$TENSORFLOW_PLUGIN_KEY
       - PLUGIN_HOST=shinobi
