--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -292,6 +292,8 @@ services:
       - PLEX_CLAIM=${PLEX_CLAIM_CODE}
     network_mode: host
     restart: always
+    depends_on: 
+      - pihole
   portainer: 
     container_name: portainer
     image: portainer/portainer-ce:latest
