--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,34 +110,34 @@ services:
     cap_add:
       - NET_ADMIN
     restart: unless-stopped    
-  taisun:
-    image: linuxserver/taisun:latest
-    container_name: taisun
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
-    networks:
-      - traefik_proxy
-    environment:
-      - "TZ=${TZ}"
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - FILE__PASSWORD=/mnt/storage/appdata/taisun/password
-    labels:
-      - traefik.enable=true
-      - traefik.backend=taisun
-      - "traefik.frontend.rule=Host:taisun.${DOMAINNAME}"
-      - traefik.port=3000
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
+  # taisun:
+  #   image: linuxserver/taisun:latest
+  #   container_name: taisun
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   restart: unless-stopped
+  #   networks:
+  #     - traefik_proxy
+  #   environment:
+  #     - "TZ=${TZ}"
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #     - FILE__PASSWORD=/mnt/storage/appdata/taisun/password
+  #   labels:
+  #     - traefik.enable=true
+  #     - traefik.backend=taisun
+  #     - "traefik.frontend.rule=Host:taisun.${DOMAINNAME}"
+  #     - traefik.port=3000
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
   # ubooquity:
   #   image: linuxserver/ubooquity:latest
   #   container_name: ubooquity
